Fixed spacing

--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ section.hc p {
 .cards1 {
     width: 53vw;
     background-color: #f2f2f2;
-    margin-bottom: 3vh;
+    margin-bottom: 8vh;
 }
 
 .cards1 h2 {
